feat: add custom serializer for custom JSON types